--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
         "baseUrl":"./",
         "paths":{
             "assets":["src/Assets/index.js"],
-            "routes":["src/Routes/index.js"],
+            "screens":["src/Screens/index.js"],
             "actions":["src/Store/Actions/index.js"],
             "resources":["src/Resources/index.js"],
             "components":["src/Components/index.js"],
