--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "appname",
+  "name": "webanimbook",
   "version": "1.0.0",
-  "description": "cordova app template",
+  "description": "Web animations book",
   "main": "index.js",
   "scripts": {
     "start": "webpack --config webpack.config.js --watch",
@@ -11,6 +11,7 @@
   "author": "Ahmed Ayachi",
   "license": "ISC",
   "devDependencies": {
+    "cordova-android": "^10.1.2",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-appminimize": "^1.0.1",
@@ -25,9 +26,6 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
-  "dependencies": {
-    "cherries": "github:AhmedAyachi/Cherries"
-  },
   "cordova": {
     "plugins": {
       "cordova-plugin-statusbar": {},
@@ -38,7 +36,11 @@
       "cordova-plugin-webview": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
+  },
+  "dependencies": {
+    "cherries": "github:AhmedAyachi/Cherries"
   }
 }
